add instructor mainpage

--- a/web/signin.html
+++ b/web/signin.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
 
-  <title>CodePen - Log-in</title>
+  <title>Lab System Management </title>
 
   <link rel='stylesheet' href='http://codepen.io/assets/libs/fullpage/jquery-ui.css'>
 
