--- a/web/Admin/AdminHome.html
+++ b/web/Admin/AdminHome.html
@@ -6,16 +6,16 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Administration Page </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="../css/Adminstyle.css">
     </head>
     <body>
-        Group
+        <h1>Group</h1>
         <ul type="disc">
-            <li> l </li>
-            <li></li>
-            <li></li>
+            <li> <a href="InitilazieGroup.jsp">Add New Group</a> </li>
+            <li> <a href="UpdateGroup.jsp">Update Group</a> </li>
         </ul>
 
 
