--- a/web/signin.html
+++ b/web/signin.html
@@ -17,7 +17,7 @@
 
   <div class="login-card">
     <h1>Log-in</h1><br>
-    <form method="POST" action="http://localhost:8084/LADManagment/SignIn">
+    <form method="POST" action="/LADManagment/SignIn">
     <input type="text" name="user" placeholder="Username">
     <input type="password" name="pass" placeholder="Password">
     <input type="submit" name="login" class="login login-submit" value="login">
